@@ -89,15 +89,12 @@ abstract class CLogRoute extends CComponent
 	 */
 	public function collectLogs($logger, $processLogs=false)
 	{
+		if($processLogs && $this->filter!==null)
+			Yii::createComponent($this->filter)->filter($this->logs);
 		$logs=$logger->getLogs($this->levels,$this->categories);
 		$this->logs=empty($this->logs) ? $logs : array_merge($this->logs,$logs);
-		if($processLogs)
-		{
-			if($this->filter!==null)
-				Yii::createComponent($this->filter)->filter($this->logs);
-			if(!empty($this->logs))
-				$this->processLogs($this->logs);
-		}
+		if($processLogs && !empty($this->logs))
+			$this->processLogs($this->logs);
 	}
 
 	/**
