@@ -31,6 +31,7 @@ Version 1.1.5 to be released
 - Enh: Added buttonset for CJuiButoon (sebas)
 - Enh: Added CGridView default sort order icon if defaultOrder is specified in sort array of CActiveDataProvider (mdomba)
 - Chg: The javascript files of CListView and CGridView are now registered at the end of the page (Qiang)
+- Chg: The additional log filter messages are now subject to filtering by log routes. (Qiang)
 
 Version 1.1.4 September 5, 2010
 -------------------------------
